--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background: url("images/MNY_0155.jpg") no-repeat;
+  background: url("Images/MNY_0155.jpg") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
